add instances of iceberg when offline store mentioned

--- a/architecture.mdx
+++ b/architecture.mdx
@@ -78,7 +78,7 @@ Chalk can be configured to use Redis or Cloud Memory Store for smaller resident 
 
 The offline store is optimized for storing all historical feature values, serving point-in-time correct queries, and tracking provenance of features.
 Chalk supports a variety of storage backends depending on data scale and latency requirements.
-Typically, Chalk uses Snowflake, Delta Lake, BigQuery or Athena.
+Typically, Chalk uses Snowflake, Delta Lake, BigQuery, Iceberg, or Athena.
 
 ---
 
