--- a/aws-cloud-deployment.mdx
+++ b/aws-cloud-deployment.mdx
@@ -44,7 +44,7 @@ storage)
 - IAM resources (e.g. creating service accounts for workload identity, etc.)
 - Kubernetes resources (EKS)
 - Online storage ([RDS](https://aws.amazon.com/rds/), or [Elasticache](https://aws.amazon.com/elasticache/), or [Dynamo](https://aws.amazon.com/dynamodb/))
-- Offline storage (typically Snowflake or Redshift)
+- Offline storage (typically Snowflake, Iceberg, or Redshift)
 
 ## Setup Instructions
 
