--- a/faq.mdx
+++ b/faq.mdx
@@ -26,7 +26,7 @@ Typically, the online store is implemented using Redis, DynamoDB, or (in some ca
 
 The offline store is intended to store historical logs of all previously ingested or computed
 features. It is used to compute large historical training sets. It is typically implemented using
-BigQuery, Snowflake, or other data warehouses.
+BigQuery, Snowflake, Iceberg, or other data warehouses.
 
 ### Can we do RBAC (Role Based Access Control) within Chalk?
 
