--- a/sql.mdx
+++ b/sql.mdx
@@ -324,7 +324,7 @@ The following are supported keys that may be included in `.chalk.sql` file comme
     A list of features that correspond to partition keys in the data source.
     This field indicates that this resolver executes its query against a data storage system that is
     partitioned by a particular set of columns.
-    This is most common with data-warehouse sources like Snowflake, BigQuery or Databricks.
+    This is most common with data-warehouse sources like Snowflake, BigQuery, Databricks, or Iceberg.
 </Attribute>
 <Attribute field='total' kind='bool'>
     Whether this resolver returns all ids of a given namespace.
