--- a/snowflake.mdx
+++ b/snowflake.mdx
@@ -254,7 +254,7 @@ To enable data unloading in your Chalk features, add the stage reference to your
 in the Chalk UI. Go to **Settings → Variables** and add:
 
 ```
-CHALK_SNOWFLAKE_UNLOAD_STAGE=CHALK_UNLOAD_STAGE
+CHALK_SNOWFLAKE_UNLOAD_STAGE={NAME_OF_YOUR_STAGE}
 ```
 
 (Replace `CHALK_UNLOAD_STAGE` with your actual stage name.)
