--- a/snowflake.mdx
+++ b/snowflake.mdx
@@ -88,44 +88,30 @@ def resolver_fn(...) -> ...:
     return snowflake.query(...).first()
 ```
 
-## Snowflake Documentation References
+## Configuring Your Snowflake Integration
 
-For detailed information about Snowflake storage integrations and external stages, refer to:
+If Chalk has helped you configure a Snowflake Offline Store already, then some of these commands my overlap with work that is already done. Please review your Snowflake configuration for existing objects matching the ones below before proceeding.
+
+For detailed information about Snowflake storage integrations and external stages, refer to: 
 
 - [CREATE STORAGE INTEGRATION](https://docs.snowflake.com/en/sql-reference/sql/create-storage-integration) - Configure IAM-based authentication for S3 access
 - [CREATE STAGE](https://docs.snowflake.com/en/sql-reference/sql/create-stage) - Create external stages using storage integrations
 
-## Important Note
-
-If Chalk has helped you configure a Snowflake Offline Store already, then some of these commands my overlap with work that is already done. Please review your Snowflake configuration for existing objects matching the ones below before proceeding.
-
-## Required Permissions
+###  Required Permissions
 
 To use Snowflake as a Chalk datasource, the user or role specified in your integration must have the following permissions:
 
-### Core Query Permissions
-
-- `USAGE` on the warehouse
-- `USAGE` on the database
-- `USAGE` on the schema
+- `USAGE` on the warehouse, database, schema, and stage 
 - `SELECT` on all tables and views being queried
-
-### Temporary Table Operations
-
-Chalk creates temporary tables during feature computation, so the role also needs:
-
+- `READ` on the stage 
+- `WRITE` on the stage 
 - `CREATE TEMPORARY TABLE` in the schema
 - `DROP` on temporary tables in the schema
 
-### Data Unloading (Optional)
+Chalk creates temporary tables during feature computation to push down filters to optimize your query loads. In addition, 
+Chalk uses the stages to optimize data unloading. 
 
-If you're using Chalk's data unload optimization to stages, grant:
-
-- `USAGE` on the stage
-- `READ` on the stage
-- `WRITE` on the stage
-
-### Recommended RBAC Setup
+### Setup RBAC
 
 Here's an example of setting up a role with the appropriate permissions:
 
@@ -165,16 +151,14 @@ GRANT READ, WRITE ON STAGE IDENTIFIER($STAGE_NAME) TO ROLE IDENTIFIER($ROLE_NAME
 GRANT ROLE IDENTIFIER($ROLE_NAME) TO USER IDENTIFIER($USER_NAME);
 ```
 
-## Creating a Stage for Data Unloading
+### Setup Snowflake Integration with AWS 
 
 Chalk can optimize large query result transfers by unloading data to a Snowflake stage
-and reading it from cloud storage (S3). This is particularly useful for large feature computations.
+and reading it from cloud storage. This is particularly useful for large feature computations. Using 
+a storage integration with IAM authentication is the recommended approach as it avoids managing
+long-lived credentials. 
 
-Using a storage integration with IAM authentication is the recommended approach as it avoids managing
-long-lived credentials. For a comprehensive setup guide including AWS IAM configuration, see the
-[Snowflake Deployment documentation](./snowflake-deployment#storage-integration-setup).
-
-### Step 1: Create or Verify Storage Integration
+#### 1. Create or Verify Storage Integration
 
 ```sql
 -- Set variables (customize these for your environment)
@@ -199,7 +183,7 @@ From the `DESCRIBE INTEGRATION` output, record these values for Step 4:
 - `STORAGE_AWS_IAM_USER_ARN` - The Snowflake IAM user ARN
 - `STORAGE_AWS_EXTERNAL_ID` - The external ID for AWS trust policy
 
-### Step 2: Create AWS IAM Role
+####  2. Create AWS IAM Role
 
 This role will be assumed by Snowflake to access the S3 bucket.
 
@@ -209,7 +193,7 @@ When setting the trust policy, use a temporary placeholder with your AWS account
 
 Attach an IAM policy that grants S3 permissions to this role (see Snowflake documentation for policy details).
 
-### Step 3: Create External Stage
+#### 3. Create External Stage
 
 ```sql
 -- Set variables (customize these for your environment)
@@ -223,7 +207,7 @@ CREATE STAGE IF NOT EXISTS IDENTIFIER($STAGE_NAME)
   URL = $S3_URL;
 ```
 
-### Step 4: Update IAM Role Trust Policy
+#### 4. Update IAM Role Trust Policy
 
 Update the trust policy for the AWS IAM role `chalk-{organization}-offline-store-access-role` with the actual Snowflake credentials from Step 1:
 
@@ -232,7 +216,7 @@ Update the trust policy for the AWS IAM role `chalk-{organization}-offline-store
 
 See the [Snowflake trust policy documentation](https://docs.snowflake.com/en/user-guide/data-load-s3-config-storage-integration#step-5-grant-the-iam-user-permissions-to-access-bucket-objects) for detailed instructions.
 
-### Step 5: Grant Permissions
+#### 5. Grant Permissions
 
 ```sql
 -- Set variables
@@ -248,10 +232,9 @@ GRANT USAGE ON STAGE IDENTIFIER($STAGE_NAME) TO ROLE IDENTIFIER($ROLE_NAME);
 GRANT READ, WRITE ON STAGE IDENTIFIER($STAGE_NAME) TO ROLE IDENTIFIER($ROLE_NAME);
 ```
 
-### Step 6: Configure Chalk Environment Variable
-
-To enable data unloading in your Chalk features, add the stage reference to your environment variables
-in the Chalk UI. Go to **Settings → Variables** and add:
+#### 6. Configure Chalk Environment Variable
+Add the stage reference to your environment variables
+in the Chalk dashboard. Go to **Settings >  Variables** and add:
 
 ```
 CHALK_SNOWFLAKE_UNLOAD_STAGE={NAME_OF_YOUR_STAGE}
