--- a/iceberg-deployment.mdx
+++ b/iceberg-deployment.mdx
@@ -68,7 +68,7 @@ metadata management:
 
 ---
 
-### Step 2: Creating the Glue Catalog
+### Step 2: Creating the database in Glue Catalog
 
 Before Chalk can use Iceberg for your offline store, you must create an AWS Glue database
 configured with your S3 bucket URI. This catalog will serve as the metadata store for your
