edit aws deployment roles

--- a/iceberg-deployment.mdx
+++ b/iceberg-deployment.mdx
@@ -42,7 +42,7 @@ Typically follows the pattern `s3://chalk-{organization}-data-bucket` (confirm w
 
 ### Step 1: AWS Permissions
 
-You'll need to grant the following IAM permissions in the engine and background persistence roles. 
+You'll need to grant the following IAM permissions.
 Note that many of these are base permissions you may have already configured. The key addition is Glue
 access for catalog operations, including table creation, schema evolution, and 
 metadata management:
