--- a/aws-cloud-deployment.mdx
+++ b/aws-cloud-deployment.mdx
@@ -174,7 +174,7 @@ infrastructure in your cloud account:
                 "elasticache:AddTagsToResource",
                 "elasticache:RemoveTagsFromResource",
                 "elasticache:ListTagsForResource",
-                "glue:*".
+                "glue:*",
                 "route53:*",
             ],
             "Effect": "Allow"
