Fix an errant backtick

--- a/configuration.mdx
+++ b/configuration.mdx
@@ -49,7 +49,8 @@ When you're first getting started, we recommend putting all your features in a s
 file. Keeping the features in a single file makes circular references easier to reason
 about, as they can just be quoted.
 
-If you do want to split your features across multiple files, you'll need to use the `if TYPE_CHECKING` block from the `typing` module`.
+If you do want to split your features across multiple files,
+you'll need to use the `if TYPE_CHECKING` block from the `typing` module.
 
 ### Organizing Feature Definitions Across Files
 
@@ -272,7 +273,6 @@ validation:
       - name: owner
         missing: error
 ```
-
 
 ---
 
