--- a/configuration.mdx
+++ b/configuration.mdx
@@ -398,7 +398,7 @@ def get_user_risk_score_2(
 ## Pinning Chalk Platform Versions
 
 By default, when you deploy in your Chalk environment, Chalk will pull the latest version of the Chalk platform.
-You can choose to pin a [Chalk platform version](/release-notes)  for each environment such that your deploys
+You can choose to pin a [Chalk platform version](/release-notes)  for each environment such that your deployments
 will only update your Chalk code, and will use the same platform image until you deploy a new pinned platform
 version.
 
