--- a/configuration.mdx
+++ b/configuration.mdx
@@ -1,6 +1,6 @@
 ---
 title: File Structure
-description: Configure your Chalk project.
+description: Configure your Chalk project and organize your features and resolvers.
 published: true
 ---
 
