--- a/marketplace-tutorial.mdx
+++ b/marketplace-tutorial.mdx
@@ -3,7 +3,7 @@ title: "A Marketplace Tutorial"
 metaTitle: "Tutorial: Building a marketplace recommendation system"
 metaDescription: Learn how to build a recommendation system for matching users with items in a marketplace with Chalk.
 description: How to build a marketplace recommendation system with Chalk.
-published: true
+published: false
 ---
 
 import { TipInfo } from '@/components/Tip'
