--- a/changelog.mdx
+++ b/changelog.mdx
@@ -223,7 +223,7 @@ Chalk's chat completion API now supports multimodal inputs, enabling you to proc
 class Receipt:
    image_url: str
    image_response: P.MultimodalPromptResponse = P.completion(
-       model="gpt-4o",
+       model="gpt-5.1",
        messages=[
            P.message(
                "system",
