--- a/integrations.mdx
+++ b/integrations.mdx
@@ -235,7 +235,7 @@ class Item:
     title: str
     description: str
     llm: P.PromptResponse = P.completion(
-        model="gpt-4o-mini-2024-07-18",
+        model="gpt-5.1-2025-11-13",
         messages=[
             P.message(
                 role="user",
